@@ -26,6 +26,8 @@ Add two new Page Wizards to more easily create some of the most commonly used Pa
 #920266 by dereine: Typo in cache.inc caused wsods in rare circumstances.
 #879482 by mvc: Ensure Panels and CTools module files are loaded during update. Apparently could cause WSOD if not.
 #917614 by jskulski: IPE broken in IE.
+#906520: Improve CSS for rounded shadow boxes on IE7.
+#923894 by yareckon: IPE save/cancel buttons can fail due to translation issues.
 
 Panels 6.x-3.7 (2010-Jul-26)
 ==============
